router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }

                ... on B {
                    id
                    other
                }
            }
        }
        
filtered:
query {
  test
  itf {
    ... on A {
      id
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on B/id"]
