router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            test
            itf {
                id
                other
            }
        }
        
filtered:
query {
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
