router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_type-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                }

                ... on B {
                    id
                }
            }
        }
        
filtered:
query {
  test
  itf {
    ... on A {
      id
    }
  }
}

paths: ["/itf/... on B"]
