router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__scalar.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                internal
            }
        }
        
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/internal"]
