router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__test.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                reviews {
                    body
                }
            }

            customer {
                name
            }
        }
        
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/reviews/@", "/customer"]
